--- a/README.html
+++ b/README.html
@@ -532,7 +532,7 @@ File <em>synthetic_data_inference.py</em> and <em>synthetic_data_forecasting.py<
 <p>Directories train_FD00X for X=1,2,3,4 contain the health indicators [1,2] and the ground truth segementations [3] computed from the corresponding original CMAPSS datasets [4].<br />
 Files train_FD00X_LHI_state are binary files in which health indicators and ground truth segementations was serialized by pickle module.<br />
 Script cmapss_experiment.py takes one of these files as its first argument.</p>
-<p>E. Ramasso. Investigating computational geometry for failure prognostics. Int. J. Progn. Health Manag., vol. 5, no. 1, p. 005, 2014.<br />
+<p>[1] E. Ramasso. Investigating computational geometry for failure prognostics. Int. J. Progn. Health Manag., vol. 5, no. 1, p. 005, 2014.<br />
 [2] <a href="https://www.mathworks.com/matlabcentral/fileexchange/54808-segmentation-of-cmapss-trajectories-into-states" class="uri">https://www.mathworks.com/matlabcentral/fileexchange/54808-segmentation-of-cmapss-trajectories-into-states</a>.<br />
 [3] E. Ramasso, Segmentation of CMAPSS health indicators into discrete states for sequence-based classification and prediction purposes,” tech.rep., 2016.<br />
 [4] <a href="https://ti.arc.nasa.gov/tech/dash/groups/pcoe/prognostic-data-repository/#turbofan" class="uri">https://ti.arc.nasa.gov/tech/dash/groups/pcoe/prognostic-data-repository/#turbofan</a>.</p>
